--- a/amzconnect-instance/lib/instance-stack/configuration.json
+++ b/amzconnect-instance/lib/instance-stack/configuration.json
@@ -1,6 +1,6 @@
 {
-  "instanceAlias": "myTestalias-aaazzz",
-  "instanceStorageBucketName": "connect-aaazzz",
+  "instanceAlias": "connectcicd",
+  "instanceStorageBucketName": "amazon-connect-b33ddbd311c0",
   "identityManagementType": "CONNECT_MANAGED",
   "instanceStorageConfig": [
     {
